--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
       </select>
       <br />
       <label for="gender">Gender </label>
-      <input type="radio" name="adil" />Male
-      <input type="radio" name="adil" />feMale <br />
+      <input type="radio" name="adil" value="Male" />Male
+      <input type="radio" name="adil" value="Female" />Female <br />
       <label for="skil">Skil </label>
       <input type="checkbox" />html <input type="checkbox" />css
       <input type="checkbox" />java <input type="checkbox" />bostraP
