--- a/index.html
+++ b/index.html
@@ -166,8 +166,19 @@
       </select>
       <br />
       <label for="gender">Gender </label>
-      <input type="radio" name="adil" value="Male" id="Male" />Male
-      <input type="radio" name="adil" value="Female" id="Female" />Female <br />
+      <label for="gender"
+        ><input type="radio" name="adil" value="Male" id="Male" />Male</label
+      >
+      <label for="gender"
+        ><input
+          type="radio"
+          name="adil"
+          value="Female"
+          id="Female"
+        />Female</label
+      >
+
+      <br />
       <label for="skil">Skil </label>
       <input type="checkbox" />html <input type="checkbox" />css
       <input type="checkbox" />java <input type="checkbox" />bostraP
